# dynamo-python

./: .gitignore  agent-review-r-001.md  agent-review-r-002.md  f_010.md  f_011.md  f_012.md  f_013.md  f_015.md  f_016.md  f_018.md  f_019.md  jg_012.md  jg_015.md  jg_016.md  jg_018.md  jg_019.md  jg_020.md  p_011.md  p_012.md  p_013.md  p_014.md  p_015.md  p_016.md  p_017.md  p_018.md  p_019.md  plan_010.md  r_010.md  r_011.md  r_012.md  r_013.md  r_014.md  r_015.md  r_016.md  r_017.md  r_018.md  r_019.md  requirement_002.md  requirement_003.md  requirements_refined_002.md  (+16 more)
docs/: MRA_SPEC.md  (+3 more)
pydynamo/: Makefile  README.md  pyproject.toml  pytest.ini  run.sh
pydynamo/config/: alignment_defaults.yaml  classification_defaults.yaml  crop_defaults.yaml  reconstruction_defaults.yaml  synthetic_align.yaml  synthetic_align_quicktest.yaml  synthetic_class.yaml  synthetic_crop.yaml  synthetic_defaults.yaml  synthetic_defaults_withMissingWedge.yaml  synthetic_recon.yaml  synthetic_recon_withMissingWedge.yaml
pydynamo/slurm_example/: README.md  alignment.slurm  classification.slurm  crop.slurm  pipeline_all.slurm  reconstruction.slurm
pydynamo/slurm_example/config/: alignment.yaml  classification.yaml  crop.yaml  reconstruction.yaml
pydynamo/src/pydynamo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pydynamo/test/: config_crop_example.yaml  config_recon_example.yaml  test_align.py  test_alignment_command.py  test_average.py  test_classification.py  test_cli.py  test_crop.py  test_generate_synthetic.py  test_reconstruction_command.py  test_runtime.py
(+45 files in other folders)
